--- a/module/Products/view/products/helper/carousel.phtml
+++ b/module/Products/view/products/helper/carousel.phtml
@@ -1,9 +1,8 @@
-
-                        
+<?php $ui_show = count( $media ) > 1 ? '' : 'hidden' ; ?>
                         <div class="image carousel_wrapper">
                             <img src="<?php echo $this->basePath('img/ui/arrow_down_indicator.svg'); ?>" alt="Arrow Down Indicator" class="indicator">
                             
-                            <div class="prev lds_carousel_ui">
+                            <div class="prev lds_carousel_ui <?php echo( $ui_show ) ?>">
                                 <a href="#prev"> <img src="/plugins/ldscarousel/img/prev-arrow.png" /> </a>
                             </div>
                             
@@ -38,11 +37,11 @@
                                 
                             </div>
                             
-                            <div class="next lds_carousel_ui">
+                            <div class="next lds_carousel_ui <?php echo( $ui_show ) ?>">
                                 <a href="#next"> <img src="/plugins/ldscarousel/img/next-arrow.png" /> </a>
                             </div>
                                 
-                            <div class="navigation lds_carousel_ui">
+                            <div class="navigation lds_carousel_ui <?php echo( $ui_show ) ?>">
                                 <?php foreach($this->media as $media) : ?>
                                 <a href="#" class="<?php if( $media['primary_media'] == 'y' ){ echo('focus'); } ?>"><span></span></a>
                                 <?php endforeach; ?>
