--- a/public/css/products.css
+++ b/public/css/products.css
@@ -131,24 +131,6 @@
                 width 300ms ease-in-out;
 }
 
-#body .container.product .buy input.active,
-#body .container.product .buy input.valid,
-#body .container.product .buy select.active,
-#body .container.product .buy select.valid,
-#body .container.product .buy textarea.active
-#body .container.product .buy textarea.valid {
-    padding: 1px 11px;
-    border-width: 2px;
-    border-style: solid;
-    border-color: #0290D0;
-    color: #0290D0;
-}
-
-#body .container.product .buy label.antal.active,
-#body .container.product .buy label.antal.valid {
-    color: #0290D0;
-}
-
 #body .container.product .buy input.error,
 #body .container.product .buy select.error,
 #body .container.product .buy textarea.error {
@@ -161,6 +143,34 @@
 
 #body .container.product .buy label.antal.error_label {
     color: rgb(217,125,50);
+}
+
+#body .container.product .buy input.active,
+#body .container.product .buy select.active,
+#body .container.product .buy textarea.active {
+    padding: 1px 11px;
+    border-width: 2px;
+    border-style: solid;
+    border-color: #0290D0;
+    color: #0290D0;
+}
+
+#body .container.product .buy label.antal.active {
+    color: #0290D0;
+}
+
+#body .container.product .buy input.valid,
+#body .container.product .buy select.valid,
+#body .container.product .buy textarea.valid {
+    padding: 1px 11px;
+    border-width: 2px;
+    border-style: solid;
+    border-color: rgb(0,153,0);
+    color: rgb(0,153,0);
+}
+
+#body .container.product .buy label.antal.valid {
+    color: rgb(0,153,0);
 }
 
 #body .container.product .buy button {
